--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IAA Events</title>
   <link rel="stylesheet" href="styles.css"/>
+  <link rel="icon" type="image/x-icon" href="Assets/Images/IAA.ico">
 </head>
 <body>
   <header class="nav">
     <div class="brand">
-      <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f680.png" alt="" class="logo">
+    <img src="Assets/Images/iaa.png" alt="IAA Logo" class="logo" />
       <span>IAA Events</span>
     </div>
     <div id="userArea" class="user-area">
