--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <input type="datetime-local" id="date" required>
           </label>
           <label>Location
-            <input type="text" id="location" placeholder="City / Server / Link" required>
+            <input type="text" id="location" placeholder=" Server / Link" required>
           </label>
           <label>Image URL (top of card)
             <input type="url" id="imageUrl" placeholder="https://example.com/image.jpg" required>
