--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>IAA Events</title>
   <link rel="stylesheet" href="styles.css"/>
   <link rel="icon" type="image/x-icon" href="Assets/Images/IAA.ico">
+  <script src="app.js"></script>
+
 </head>
 <body>
   <header class="nav">
