odjk;lkfjsda;djlsfkdfs;kjl

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <label>Location
             <input type="text" id="location" placeholder="City / Server / Link" required>
           </label>
-          <label>Image URL (top of card)
+          <label>Image URL (top of card) must be 654 × 385
             <input type="url" id="imageUrl" placeholder="https://example.com/image.jpg" required>
           </label>
         </div>
